--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <button class="btn btn-light">By now for 5.99$</button>
           </div>
           <div class="col-md-5 col-sm-12">
-            <img src="/assets/assets/header-img.png" class="img-fluid" alt="" >
+            <img src="./assets/assets/header-img.png" class="img-fluid" alt="" >
           </div>
         </div>
       </div>
